# Rusty-web

./: .gitignore  Cargo.toml  README.md  SECURITY.md  index.html  scroll_test.html
Browser.exe.WebView2/EBWebView/: Breadcrumbs  Local State  RevisitationBloomfilter
Browser.exe.WebView2/EBWebView/BrowserMetrics/: BrowserMetrics-697A78EA-5374.pma
Browser.exe.WebView2/EBWebView/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences
Browser.exe.WebView2/EBWebView/Default/DawnGraphiteCache/: data_1  index
Browser.exe.WebView2/EBWebView/Default/DawnWebGPUCache/: data_1  index
Browser.exe.WebView2/EBWebView/Default/Extension Rules/: LOG
Browser.exe.WebView2/EBWebView/Default/Extension Scripts/: LOG
Browser.exe.WebView2/EBWebView/Default/Extension State/: LOG
Browser.exe.WebView2/EBWebView/Default/GPUCache/: data_0  data_1  data_2  index
Browser.exe.WebView2/EBWebView/Default/Network/: Cookies  Network Persistent State  (+2 more)
Browser.exe.WebView2/EBWebView/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  index
Browser.exe.WebView2/EBWebView/GraphiteDawnCache/: data_1  index
Browser.exe.WebView2/EBWebView/ShaderCache/: data_1  index
bundler/: build_bundler.bat  bundler.cpp
cpp/: engine.cpp  stb_image.h
packager/: CMakeLists.txt  main.cpp
rusty_web_core/: Cargo.toml
rusty_web_core/src/: homepage.html  lib.rs  settings.html  toolbar.html
src/: main.rs
(+102 files in other folders)
